fixed bug in buttons alignment.

--- a/src/containers/App/less/landingpage.less
+++ b/src/containers/App/less/landingpage.less
@@ -100,6 +100,7 @@ margin-top: 80px;
 }
  
 .question{
+  float: left;
 	color: #fff;
 	line-height: 50px;
 	padding-left: 15px;
